--- a/sass/general/_forms.scss
+++ b/sass/general/_forms.scss
@@ -1,6 +1,8 @@
-// -------------
-// Form partials
+// Forms
+// =====
 
 @import "forms/buttons";
 @import "forms/formfields";
 @import "forms/inputs";
+
+@import "forms/radio-select";
