--- a/sass/modules/_add-story.scss
+++ b/sass/modules/_add-story.scss
@@ -4,3 +4,21 @@
 .add-story-form {
   [id="story-form-toggle"]:checked ~ & { @extend %toggle-content-hidden; }
 }
+
+.story-body-group {
+  @include tabs(body-field video-field, '.tab-options' null);
+
+  %hide-tab-content { display: none; }
+  %show-tab-content { display: block; }
+  %active-tab-title { @extend %select-button-active; }
+
+  .tab-options {
+    @extend %tab-buttons;
+    @include trailer(-1);
+    float: right;
+  }
+
+  .formfield { clear: both; }
+
+  .form-type { @include rhythm-padding($button-border-rhythm); }
+}
