Return to embeded video option

--- a/sass/general/forms/_formfields.scss
+++ b/sass/general/forms/_formfields.scss
@@ -5,3 +5,8 @@
   @include pie-clearfix;
   @include trailer(.5);
 }
+
+.form-help {
+  @include adjust-font-size-to($smallpx);
+  color: color($base light);
+}
