--- a/sass/demo.scss
+++ b/sass/demo.scss
@@ -143,13 +143,14 @@ $steps: teacher-login learner-login topic-select learning-session results profil
   @include pie-clearfix;
   @include leader(.5);
   @include leading-border(2px,.5);
-  @include pad(1,1);
   position: relative;
+  padding-left: span(1);
+  padding-right: span(1);
   border-top: 2px dotted color($blue,.25);
   counter-increment: demo;
 
   h2 {
-    margin: 0 0 - columns(1,8);
+    margin: 0 0 - span(1 of 8);
     color: color($accent);
     @include before(unquote('counter(demo) " : "')) {
       color: color(light);
@@ -176,7 +177,7 @@ $steps: teacher-login learner-login topic-select learning-session results profil
   }
   .session {
     float: right;
-    width: columns(3);
+    width: span(3);
     height: 100%;
     margin-left: -1em;
     padding: rhythm(.5);
@@ -193,11 +194,11 @@ $steps: teacher-login learner-login topic-select learning-session results profil
 }
 
 .learner-feedback {
-  @include span-columns(4,8);
+  @include span(4 of 8);
 }
 
 .teacher-feedback {
-  @include span-columns(4 omega,8);
+  @include span(last 4 of 8);
 }
 
 .feedback-item {
@@ -234,12 +235,12 @@ $steps: teacher-login learner-login topic-select learning-session results profil
 // --------
 
 .learner-profile {
-  @include span-columns(4,8);
+  @include span(4 of 8);
   @include trailer;
 }
 
 .teacher-profile {
-  @include span-columns(4 omega,8);
+  @include span(last 4 of 8);
   @include trailer;
 }
 
