--- a/sass/general/_root.scss
+++ b/sass/general/_root.scss
@@ -2,7 +2,8 @@
 // ====
 
 @include establish-baseline;
-@include border-box-sizing;
+
+* { @include box-sizing(border-box); }
 
 html {
   @include sans;
