fix styleguide link typo

--- a/templates/styleguide/styleguide.html
+++ b/templates/styleguide/styleguide.html
@@ -17,7 +17,7 @@
       <b class="sg-nav-title">Base</b>
       <ul>
         <li><a href="#size-pattern">Size</a></li>
-        <li><a href="color-pattern">Color</a></li>
+        <li><a href="#color-pattern">Color</a></li>
       </ul>
     </li>
   </ul>
