--- a/static/css/styleguide.css
+++ b/static/css/styleguide.css
@@ -592,15 +592,10 @@ body {
   -webkit-border-radius: 0.25em;
   -moz-border-radius: 0.25em;
   border-radius: 0.25em;
-  background-image: -webkit-linear-gradient(45deg, rgba(229, 229, 229, 0.25) 25%, rgba(229, 229, 229, 0) 25%), -webkit-linear-gradient(135deg, rgba(229, 229, 229, 0.25) 25%, rgba(229, 229, 229, 0) 25%), -webkit-linear-gradient(45deg, rgba(229, 229, 229, 0) 75%, rgba(229, 229, 229, 0.25) 75%), -webkit-linear-gradient(135deg, rgba(229, 229, 229, 0) 75%, rgba(229, 229, 229, 0.25) 75%);
-  background-image: -moz-linear-gradient(45deg, rgba(229, 229, 229, 0.25) 25%, rgba(229, 229, 229, 0) 25%), -moz-linear-gradient(135deg, rgba(229, 229, 229, 0.25) 25%, rgba(229, 229, 229, 0) 25%), -moz-linear-gradient(45deg, rgba(229, 229, 229, 0) 75%, rgba(229, 229, 229, 0.25) 75%), -moz-linear-gradient(135deg, rgba(229, 229, 229, 0) 75%, rgba(229, 229, 229, 0.25) 75%);
-  background-image: -o-linear-gradient(45deg, rgba(229, 229, 229, 0.25) 25%, rgba(229, 229, 229, 0) 25%), -o-linear-gradient(135deg, rgba(229, 229, 229, 0.25) 25%, rgba(229, 229, 229, 0) 25%), -o-linear-gradient(45deg, rgba(229, 229, 229, 0) 75%, rgba(229, 229, 229, 0.25) 75%), -o-linear-gradient(135deg, rgba(229, 229, 229, 0) 75%, rgba(229, 229, 229, 0.25) 75%);
-  background-image: linear-gradient(45deg, rgba(229, 229, 229, 0.25) 25%, rgba(229, 229, 229, 0) 25%), linear-gradient(-45deg, rgba(229, 229, 229, 0.25) 25%, rgba(229, 229, 229, 0) 25%), linear-gradient(45deg, rgba(229, 229, 229, 0) 75%, rgba(229, 229, 229, 0.25) 75%), linear-gradient(-45deg, rgba(229, 229, 229, 0) 75%, rgba(229, 229, 229, 0.25) 75%);
-  -webkit-background-size: 1.27778rem 1.27778rem;
-  -moz-background-size: 1.27778rem 1.27778rem;
-  -o-background-size: 1.27778rem 1.27778rem;
-  background-size: 1.27778rem 1.27778rem;
-  background-attachment: fixed;
+  -webkit-box-shadow: inset #999999 0 0 3px;
+  -moz-box-shadow: inset #999999 0 0 3px;
+  box-shadow: inset #999999 0 0 3px;
+  background: rgba(229, 229, 229, 0.5);
 }
 
 .size-demo div {
