--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -123,7 +123,7 @@ html {
 
 html {
   font-family: "CambridgeRound", "Helvetica Neue", Arial, Helvetica, sans-serif;
-  color: #005e5e;
+  color: #4c4c4c;
   background: rgba(123, 211, 211, 0.25);
 }
 
@@ -140,7 +140,7 @@ a:hover, a:active {
   outline: none;
 }
 a:link, a:visited {
-  color: #009191;
+  color: #005757;
   text-decoration: none;
 }
 a:focus, a:hover, a:active {
@@ -203,10 +203,10 @@ button {
   -webkit-border-radius: 0.25rem;
   -moz-border-radius: 0.25rem;
   border-radius: 0.25rem;
-  background-image: -webkit-linear-gradient(top, rgba(0, 94, 94, 0) 40%, rgba(229, 229, 229, 0.25));
-  background-image: -moz-linear-gradient(top, rgba(0, 94, 94, 0) 40%, rgba(229, 229, 229, 0.25));
-  background-image: -o-linear-gradient(top, rgba(0, 94, 94, 0) 40%, rgba(229, 229, 229, 0.25));
-  background-image: linear-gradient(to bottom, rgba(0, 94, 94, 0) 40%, rgba(229, 229, 229, 0.25));
+  background-image: -webkit-linear-gradient(top, rgba(76, 76, 76, 0) 40%, rgba(229, 229, 229, 0.25));
+  background-image: -moz-linear-gradient(top, rgba(76, 76, 76, 0) 40%, rgba(229, 229, 229, 0.25));
+  background-image: -o-linear-gradient(top, rgba(76, 76, 76, 0) 40%, rgba(229, 229, 229, 0.25));
+  background-image: linear-gradient(to bottom, rgba(76, 76, 76, 0) 40%, rgba(229, 229, 229, 0.25));
   display: inline-block;
   padding-left: 0.63889rem;
   padding-right: 0.63889rem;
@@ -220,13 +220,13 @@ button {
 }
 
 .primary-action:active, .signup button:active {
-  -webkit-box-shadow: rgba(0, 18, 18, 0.5) 0 0 0.25rem inset;
-  -moz-box-shadow: rgba(0, 18, 18, 0.5) 0 0 0.25rem inset;
-  box-shadow: rgba(0, 18, 18, 0.5) 0 0 0.25rem inset;
-  background-image: -webkit-linear-gradient(bottom, rgba(0, 94, 94, 0) 40%, rgba(229, 229, 229, 0.25));
-  background-image: -moz-linear-gradient(bottom, rgba(0, 94, 94, 0) 40%, rgba(229, 229, 229, 0.25));
-  background-image: -o-linear-gradient(bottom, rgba(0, 94, 94, 0) 40%, rgba(229, 229, 229, 0.25));
-  background-image: linear-gradient(to top, rgba(0, 94, 94, 0) 40%, rgba(229, 229, 229, 0.25));
+  -webkit-box-shadow: rgba(15, 15, 15, 0.5) 0 0 0.25rem inset;
+  -moz-box-shadow: rgba(15, 15, 15, 0.5) 0 0 0.25rem inset;
+  box-shadow: rgba(15, 15, 15, 0.5) 0 0 0.25rem inset;
+  background-image: -webkit-linear-gradient(bottom, rgba(76, 76, 76, 0) 40%, rgba(229, 229, 229, 0.25));
+  background-image: -moz-linear-gradient(bottom, rgba(76, 76, 76, 0) 40%, rgba(229, 229, 229, 0.25));
+  background-image: -o-linear-gradient(bottom, rgba(76, 76, 76, 0) 40%, rgba(229, 229, 229, 0.25));
+  background-image: linear-gradient(to top, rgba(76, 76, 76, 0) 40%, rgba(229, 229, 229, 0.25));
 }
 
 .primary-action {
@@ -262,7 +262,7 @@ button {
   font-size: 0.77778rem;
   line-height: 23px;
   line-height: 1.27778rem;
-  color: #337e7e;
+  color: #6f6f6f;
 }
 
 [type="text"], [type="email"], [type="password"], [type="url"], textarea {
@@ -322,7 +322,7 @@ label {
 }
 [role="banner"] .org:link, [role="banner"] .org:visited {
   font-weight: bold;
-  color: #005e5e;
+  color: #4c4c4c;
 }
 [role="banner"] .org:focus, [role="banner"] .org:hover, [role="banner"] .org:active {
   color: #94001a;
@@ -367,6 +367,7 @@ label {
   line-height: 23px;
   line-height: 1.27778rem;
   font-family: "SquareSerif", "Helvetica Neue", Arial, Helvetica, sans-serif;
+  color: #005757;
   font-weight: bold;
 }
 @media (min-width: 30em) {
@@ -500,7 +501,7 @@ label {
   padding: 0.58333rem;
   position: relative;
   color: #e5e5e5;
-  border-color: #005e5e;
+  border-color: #4c4c4c;
 }
 .message.success {
   background: #257c00;
@@ -546,6 +547,7 @@ label {
 }
 .desc h2 {
   font-family: "SquareSerif", "Helvetica Neue", Arial, Helvetica, sans-serif;
+  color: #005757;
   font-weight: bold;
 }
 .desc p {
