--- a/templates/teacher_detail.html
+++ b/templates/teacher_detail.html
@@ -1,5 +1,7 @@
 {% extends "base_site.html" %}
 
+{% load markup %}
+
 {% block main %}{% with profile=teacher.teacher_profile %}
 <article class="teacher-detail">
 
@@ -18,7 +20,7 @@
         <span class="value">{{ teacher.date_joined|date }}</span>
       </li>
     </ul>
-    <p class="teacher-bio">{{ teacher.bio }}</p>
+    <div class="teacher-bio">{{ teacher.bio|markdown }}</div>
   </header>
 
   {# Story Form #}
